--- a/config.json
+++ b/config.json
@@ -16,13 +16,13 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "ARIF-BABU",
+    "BOTNAME": "SHIVA❤🪽",
     "PREFIX": "#",
     "ADMINBOT": [
-        "61553634015672"
+        "100086169630526"
     ],
     "NDH": [
-        "61553634015672"
+        "100086169630526"
     ],
     "DATABASE": {
         "sqlite": {
